--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -15,6 +15,7 @@
 	<description>Resource processor</description>
 	<properties>
 		<java.version>17</java.version>
+		<tika.version>2.4.0</tika.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,12 +25,13 @@
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
-			<version>2.4.0</version>
+			<version>${tika.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-parser-audiovideo-module</artifactId>
-			<version>2.4.0</version>
+			<artifactId>tika-parsers-standard-package</artifactId>
+			<version>${tika.version}</version>
+			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
