[task-2] : service communication implementation

--- a/processor/src/main/resources/application.properties
+++ b/processor/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port = 8092
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+kafka.consumer.group-id=songsapp
+kafka.topic-upload=resource-upload
+retry.backoff-period=2000
+retry.max-attempts=3
