--- a/resource/src/main/resources/application.properties
+++ b/resource/src/main/resources/application.properties
@@ -3,3 +3,6 @@ aws.s3.bucket-name=songsbucket
 server.port = 8091
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+kafka.bootstrap-server=localhost:9092
+kafka.topic-upload=resource-upload
