--- a/processor/src/main/resources/application.properties
+++ b/processor/src/main/resources/application.properties
@@ -2,6 +2,10 @@ server.port = 8092
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
+spring.kafka.bootstrap-servers=http://${SERVICE_TO_KAFKA_CONNECTION}:${SERVICE_TO_KAFKA_PORT}
+resource-service-app.url=${RESOURCE_SERVICE_HOST:localhost}:8091
+song-service-app.url=${SONG_SERVICE_HOST:localhost}:8093
+
 kafka.consumer.group-id=songsapp
 kafka.topic-upload=resource-upload
 retry.backoff-period=2000
