--- a/resource/src/test/resources/application.properties
+++ b/resource/src/test/resources/application.properties
@@ -4,16 +4,12 @@ server.port = 8091
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
-spring.kafka.bootstrap-servers=${SERVICE_TO_KAFKA_CONNECTION}:${SERVICE_TO_KAFKA_PORT}
+spring.kafka.bootstrap-servers=${KAFKA_DOCKER_SERVICE:localhost}:9093
 kafka.consumer.group-id=songsapp
 kafka.topic-upload=resource-upload
 
-spring.datasource.url=jdbc:postgresql://${DB_SERVICE:localhost}:${DB_PORT:5342}/resourcedb
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=h2
+spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 logging.level.com.amazonaws.util.EC2MetadataUtils=error
 logging.level.com.amazonaws.internal.InstanceMetadataServiceResourceFetcher=error
