--- a/song/pom.xml
+++ b/song/pom.xml
@@ -63,6 +63,11 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
