--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -17,6 +17,8 @@
 		<java.version>17</java.version>
 		<tika.version>2.4.0</tika.version>
 		<cucumber.version>7.4.1</cucumber.version>
+		<spring.cloud.version>3.1.3</spring.cloud.version>
+		<spring.retry.version>1.3.3</spring.retry.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,12 +53,12 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>3.1.3</version>
+			<version>${spring.cloud.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
-			<version>1.3.3</version>
+			<version>${spring.retry.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.cucumber</groupId>
