--- a/song/pom.xml
+++ b/song/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<cucumber.version>7.4.1</cucumber.version>
+		<postgresql.version>42.4.0</postgresql.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,7 +67,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.4.0</version>
+			<version>${postgresql.version}</version>
 		</dependency>
 	</dependencies>
 
