--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -78,6 +78,11 @@
 			<version>${cucumber.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>${spring.cloud.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
