--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -15,7 +15,10 @@ spring:
           uri: lb://song-service
           predicates:
             - Path=/songs/**
-
+        - id: storage-service
+          uri: lb://storage-service
+          predicates:
+            - Path=/storages/**
 eureka:
   client:
     serviceUrl:
