--- a/processor/src/test/resources/application.yaml
+++ b/processor/src/test/resources/application.yaml
@@ -6,6 +6,7 @@ kafka:
   consumer:
     group-id: songsapp
   topic-upload: resource-upload
+  topic-proceeded: resource-proceeded
 retry:
   backoff-period: 2000
   max-attempts: 3
