--- a/processor/src/main/resources/application.yaml
+++ b/processor/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ kafka:
   consumer:
     group-id: songsapp
   topic-upload: resource-upload
+  topic-proceeded: resource-proceeded
 retry:
   backoff-period: 2000
   max-attempts: 5
