--- a/resource/pom.xml
+++ b/resource/pom.xml
@@ -20,6 +20,7 @@
         <spring.cloud.version>3.1.3</spring.cloud.version>
         <commons.io.version>2.11.0</commons.io.version>
         <postgresql.version>42.4.0</postgresql.version>
+        <resilience.version>1.7.1</resilience.version>
     </properties>
     <dependencies>
         <dependency>
@@ -89,6 +90,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>${spring.cloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot2</artifactId>
+            <version>${resilience.version}</version>
         </dependency>
     </dependencies>
 
