--- a/processor/src/test/resources/application.yaml
+++ b/processor/src/test/resources/application.yaml
@@ -5,8 +5,9 @@ spring:
 kafka:
   consumer:
     group-id: songsapp
-  topic-upload: resource-upload
-  topic-proceeded: resource-proceeded
+  topics:
+    upload: resource-upload
+    processed: resource-processed
 retry:
   backoff-period: 2000
   max-attempts: 3
