--- a/resource/src/test/resources/application.yaml
+++ b/resource/src/test/resources/application.yaml
@@ -30,5 +30,6 @@ aws:
 kafka:
   consumer:
     group-id: song.proceeded
-  topic-upload: resource-upload
-  topic-proceeded: resource-proceeded
+  topics:
+    upload: resource-upload
+    processed: resource-processed
