[task-7] : logging and monitoring implementation

--- a/config/.env
+++ b/config/.env
@@ -13,4 +13,5 @@ POSTGRES_PASSWORD: 1234
 DB_SERVICE: db-postgres
 DB_PORT: 5432
 
-EUREKA_URL=http://eureka:8761/eureka
+EUREKA_URL: http://eureka:8761/eureka
+ELASTICSEARCH_HOSTS: http://elasticsearch:9200
