--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,3 +107,32 @@ services:
       - '8080:8080'
     depends_on:
       - eureka
+  elasticsearch:
+    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.1
+    ports:
+      - "9200:9200"
+    environment:
+      - ES_JAVA_OPTS=-Xms512m -Xmx1024m
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+  logstash:
+    container_name: logstash
+    image: docker.elastic.co/logstash/logstash:7.16.1
+    volumes:
+      - ./config/logstash/pipeline/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    ports:
+      - "5000:5000"
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    depends_on:
+      - elasticsearch
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:7.16.1
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_HOSTS}
+    depends_on:
+      - elasticsearch
