--- a/resource/pom.xml
+++ b/resource/pom.xml
@@ -21,6 +21,8 @@
         <commons.io.version>2.11.0</commons.io.version>
         <postgresql.version>42.4.0</postgresql.version>
         <resilience.version>1.7.1</resilience.version>
+        <logstash.version>7.2</logstash.version>
+        <micrometer.version>1.9.3</micrometer.version>
     </properties>
     <dependencies>
         <dependency>
@@ -100,6 +102,25 @@
             <groupId>io.github.resilience4j</groupId>
             <artifactId>resilience4j-spring-boot2</artifactId>
             <version>${resilience.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>${spring.cloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-elastic</artifactId>
+            <version>${micrometer.version}</version>
         </dependency>
     </dependencies>
 
