--- a/resource/src/main/resources/application.yaml
+++ b/resource/src/main/resources/application.yaml
@@ -54,3 +54,21 @@ resilience4j:
         minimumNumberOfCalls: 3
         waitDurationInOpenState: 20s
         slidingWindowType: COUNT_BASED
+
+management:
+  metrics:
+    export:
+      elastic:
+        enabled: true
+        host: http://elasticsearch:9200
+        index: metrics
+        step: 5s
+    tags:
+      application: ${spring.application.name}
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics
+  endpoint:
+    health:
+      show-details: always
