--- a/song/pom.xml
+++ b/song/pom.xml
@@ -17,7 +17,9 @@
 		<java.version>17</java.version>
 		<cucumber.version>7.4.1</cucumber.version>
 		<postgresql.version>42.4.0</postgresql.version>
-		<eureka.version>3.1.3</eureka.version>
+		<spring.cloud.version>3.1.3</spring.cloud.version>
+		<logstash.version>7.2</logstash.version>
+		<micrometer.version>1.9.3</micrometer.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,6 +50,25 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>${logstash.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<version>${spring.cloud.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-elastic</artifactId>
+			<version>${micrometer.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>${cucumber.version}</version>
@@ -73,7 +94,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-			<version>${eureka.version}</version>
+			<version>${spring.cloud.version}</version>
 		</dependency>
 	</dependencies>
 
