[task-8] : security implementation

--- a/config/.env
+++ b/config/.env
@@ -15,3 +15,4 @@ DB_PORT: 5432
 
 EUREKA_URL: http://eureka:8761/eureka
 ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+KEYCLOAK_URI: http://keycloak:8080/auth
