--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,10 +68,12 @@ services:
     depends_on:
       - db-postgres
       - eureka
+      - keycloak
     environment:
       DB_SERVICE: ${DB_SERVICE}
       DB_PORT: ${DB_PORT}
       EUREKA_URL: ${EUREKA_URL}
+      KEYCLOAK_URI: ${KEYCLOAK_URI}
   db-postgres:
     image: postgres
     container_name: db-postgres-container
@@ -83,6 +85,25 @@ services:
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
+  keycloak:
+    image: jboss/keycloak
+    container_name: keycloak
+    ports:
+      - "9090:9090"
+      - "8080:8080"
+      - "8443:8443"
+    environment:
+      DB_VENDOR: postgres
+      DB_ADDR: db-postgres
+      DB_DATABASE: keycloak
+      DB_SCHEMA: public
+      DB_USER: root
+      DB_PASSWORD: 1234
+      KEYCLOAK_USER: admin
+      KEYCLOAK_PASSWORD: 123456
+      KEYCLOAK_FRONTEND_URL: ${KEYCLOAK_URI}
+    depends_on:
+      - db-postgres
   localstack:
     image: localstack/localstack
     container_name: localstack
@@ -104,7 +125,7 @@ services:
     environment:
       EUREKA_URL: ${EUREKA_URL}
     ports:
-      - '8080:8080'
+      - '9990:9990'
     depends_on:
       - eureka
   elasticsearch:
