--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -72,6 +72,10 @@
 			<artifactId>micrometer-registry-elastic</artifactId>
 			<version>${micrometer.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
